--- a/app/css/card.scss
+++ b/app/css/card.scss
@@ -94,3 +94,13 @@
   mask-clip: padding-box, border-box;
   mask-composite: intersect;
 }
+
+
+/* styles/globals.css or your global Tailwind file */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 9999px;
+}
